--- a/src/ttalviste.web/Views/Shared/_Layout.cshtml
+++ b/src/ttalviste.web/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Start</span> Bootstrap
+                    <i class="fa fa-play-circle"></i>  <span class="light">ttalviste</span> Consultancy
                 </a>
             </div>
 
@@ -45,9 +45,6 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#download">Download</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
