--- a/src/ttalviste.web/Views/Shared/_About.cshtml
+++ b/src/ttalviste.web/Views/Shared/_About.cshtml
@@ -2,10 +2,11 @@
 <section id="about" class="container content-section text-center">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-            <h2>About Grayscale</h2>
-            <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-            <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-            <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+            <h2>About Me</h2>
+            <p>For about 5 years I have been doing active development. Mostly on Web development projects.</p>
+            <p>I have worked mostly on the .Net Platform, starting from version 2.</p>
+            <p>Futhermore, I have worked with Umbraco CMS and worked on different projects with it, e.g http://www.sported.org.uk</p>
+            <p>Aside from Web Development, I have done development on backend systems and CRMs.</p>
         </div>
     </div>
 </section>
