Add Favicon; Add theme colour for Android Chrome 39

--- a/src/ttalviste.web/Views/Shared/_Layout.cshtml
+++ b/src/ttalviste.web/Views/Shared/_Layout.cshtml
@@ -1,11 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Web and Software Development Consultancy">
-    <meta name="author" content="ttalviste">
+    <meta charset="utf-8" />
+    <meta name="theme-color" content="#ffff">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Web and Software Development Consultancy" />
+    <meta name="author" content="ttalviste" />
+    <link rel="icon" href="~/img/favicon.ico" />s
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
