--- a/src/ttalviste.web/Views/Shared/_Layout.cshtml
+++ b/src/ttalviste.web/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
         <!-- Footer -->
         <footer>
             <div class="container text-center">
-                <p>Copyright &copy; www.talviste.ee @DateTime.Now.Year</p>
+                <p>Copyright &copy; www.ttalviste.ee @DateTime.Now.Year</p>
             </div>
         </footer>
 
