Add new section and udate css;

--- a/src/ttalviste.web/Assets/less/site.less
+++ b/src/ttalviste.web/Assets/less/site.less
@@ -242,11 +242,11 @@ a {
     padding-top: 100px;
 }
 
-.download-section {
+.news-section {
     width: 100%;
     padding: 50px 0;
     color: @light;
-    background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
+    background: url(../img/news-bg.jpg) no-repeat center center scroll;
     background-color: @dark;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -265,7 +265,8 @@ a {
         padding-top: 250px;
     }
 
-    .download-section {
+    .news-section {
+        margin-top:50px;
         padding: 100px 0;
     }
 
