--- a/src/ttalviste.web/Views/Shared/_Layout.cshtml
+++ b/src/ttalviste.web/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web and Software Development Consultancy" />
     <meta name="author" content="ttalviste" />
-    <link rel="icon" href="~/img/favicon.ico" />s
+    <link rel="icon" href="~/img/favicon.ico" />
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
@@ -50,6 +50,9 @@
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
                         <a href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#news">News</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">About</a>
