--- a/src/ttalviste.web/Views/Shared/_About.cshtml
+++ b/src/ttalviste.web/Views/Shared/_About.cshtml
@@ -1,12 +1,9 @@
-﻿<!-- About Section -->
-<section id="about" class="container content-section text-center">
-    <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-            <h2>About Me</h2>
-            <p>For about 5 years I have been doing active development. Mostly on Web development projects.</p>
-            <p>I have worked mostly on the .Net Platform, starting from version 2.</p>
-            <p>Futhermore, I have worked with Umbraco CMS and worked on different projects with it, e.g http://www.sported.org.uk</p>
-            <p>Aside from Web Development, I have done development on backend systems and CRMs.</p>
-        </div>
+﻿<div class="row">
+    <div class="col-lg-8 col-lg-offset-2">
+        <h2>About Me</h2>
+        <p>For about 5 years I have been doing active development. Mostly on Web development projects.</p>
+        <p>I have worked mostly on the .Net Platform, starting from version 2.</p>
+        <p>Futhermore, I have worked with Umbraco CMS and worked on different projects with it, e.g http://www.sported.org.uk</p>
+        <p>Aside from Web Development, I have done development on backend systems and CRMs.</p>
     </div>
-</section>
+</div>
